--- a/paper_results/perceptual_correspondence.ipynb
+++ b/paper_results/perceptual_correspondence.ipynb
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We select an image from ImageNet to evaluate."
+    "We select an mammograph image from [CBIS-DDSM](https://wiki.cancerimagingarchive.net/pages/viewpage.action?pageId=22516629) to evaluate."
    ]
   },
   {
