Updated examples with saliency methods package.

--- a/attribute_examples/determinism.ipynb
+++ b/attribute_examples/determinism.ipynb
@@ -36,8 +36,8 @@
     "import torch\n",
     "import torchvision.models\n",
     "\n",
-    "from interpretability_methods.lime import LIME\n",
-    "from interpretability_methods.util import visualize_saliency\n",
+    "from saliency_methods.lime_method import LIME\n",
+    "from saliency_methods.util import visualize_saliency\n",
     "from util import melanoma_transform, load_model_from_pytorch, load_pil_image"
    ]
   },
@@ -97,8 +97,9 @@
     "display_transform = melanoma_transform(test=True, normalize=False)\n",
     "\n",
     "image_input = model_transform(image)\n",
-    "display_image = display_transform(image).numpy().transpose(1, 2, 0)\n",
-    "plt.imshow(display_image)\n",
+    "display_image = display_transform(image).numpy()\n",
+    "display_batch = np.expand_dims(display_image, axis=0)\n",
+    "plt.imshow(display_image.transpose(1, 2, 0))\n",
     "plt.axis('off');"
    ]
   },
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,13 +160,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f2262173fe9446ba7514761fc762026",
+       "model_id": "ed4354ca254a4efc8b918cc687484d58",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,13 +204,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1508fe750115499e93f2f85608245949",
+       "model_id": "42def9bec990442d9e21195a1e0fb09f",
        "version_major": 2,
        "version_minor": 0
       },
